# heisenberg_kagome

./: .gitignore  H_sat.txt  chain.ipynb  hexagon.ipynb  hexagon_comparison.ipynb  kagome.ipynb  kagome_sp.ipynb  numerical_eigenstate.ipynb  pentagon.ipynb  playground.ipynb  pyproject.toml  square.ipynb  square_and_triangle.ipynb  square_comparison.ipynb  state.txt  state_prep.ipynb  state_prep2.ipynb  symmetry.ipynb  test.ipynb  triangle.ipynb  two_triangles.ipynb  utils.py
