[tool.poetry]
name = "heisenberg-kagome"
version = "0.1.0"
description = ""
authors = ["Areeq Hasan <areeq.i.hasan@gmail.com>"]
readme = "README.md"
packages = [{include = "heisenberg_kagome"}]

[tool.poetry.dependencies]
python = "^3.11"
qiskit = "^0.40.0"
qiskit-nature = "^0.5.2"
qiskit-ibm-runtime = "^0.8.0"
matplotlib = "^3.6.3"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pylatexenc = "^2.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
